--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "lucide-react": "^0.471.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "rehype-katex": "^7.0.1",
+    "remark-math": "^6.0.0",
     "tailwindcss": "^3.4.17",
     "tw-to-css": "^0.0.12"
   },
